2019-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-package.Rnw: Another wrapper
	* vignettes/Rcpp-jss-2011.Rnw: Idem

2019-10-23  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-*.Rnw: Wrappers around pdf/*pdf
	* vignettes/Makefile: Added

2019-10-21  Dirk Eddelbuettel  <edd@debian.org>
	
	* vignettes/rmd/*: Moved from parent directory
	* vignettes/pdf/*: New target directory

2019-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/Rcpp-FAQ.Rmd: Turn off knitr cache
	* vignettes/Rcpp-introduction.Rmd: Idem

	* vignettes/Makefile: Add simple Makefile
	* .Rbuildignore: Exclude vignettes/Makefile

2019-10-19  Stephen Wade  <stephematician@gmail.com>

	* inst/include/Rcpp/XPtr.h: XPtr constructor split up, a single
	argument does not modify tags and protected data of the external pointer
	* inst/unitTests/cpp/Xptr.cpp: Added test
	* inst/unitTests/runit.XPtr.R: Idem

2019-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added CRAN + BioConductor badges for reverse depends,

2019-10-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/exceptions.h: Condition use of typeid() on
	absence of RCPP_NO_RTTI in two places
	* inst/include/Rcpp/r/headers.h: RCPP_NO_RTTI implies RCPP_NO_MODULES

2019-10-04  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-attributes.Rmd: Correct two unevaluated knitr C++
	chunks to mode 'Rcpp' rather than the (unregistered) C++ mode
	* vignettes/Rcpp-extending.Rmd: Minor white-space tweak to avoid
	paragraph-spacing warnings from latex and its mdframed style
	* vignettes/Rcpp-modules.Rmd: Idem
	* vignettes/Rcpp-sugar.Rmd: Idem

2019-10-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	
2019-09-30  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp.h: add RCPP_NO_MODULES
	* inst/include/Rcpp/api/meat/is.h: Idem
	* inst/include/Rcpp/api/meat/meat.h: Idem
