@@ -1,4 +1,5 @@
 
+## This Makefile is not included in the package sources so we can use GNUmake idioms. Yay.
 
 rmdsources := 		$(wildcard *.Rmd)
 rmdvignettes := 	$(rmdsources:.Rmd=.pdf)
@@ -10,9 +11,14 @@ rmdvignettes := 	$(rmdsources:.Rmd=.pdf)
 
 all:			${rmdvignettes} Rcpp-jss-2011.pdf
 
-Rcpp-jss-2011.pdf:	Rcpp-jss-2011.Rnw
+Rcpp-jss-2011.tex:	Rcpp-jss-2011.Rnw
 			Rscript -e 'Sweave("$<")'
+
+Rcpp-jss-2011.pdf:	Rcpp-jss-2011.tex
+			Rscript -e 'tools::texi2pdf("$<", texi2dvi="pdflatex")'
+			Rscript -e 'tools::texi2pdf("$<", texi2dvi="pdflatex")'
 			Rscript -e 'tools::compactPDF("$@", gs_quality="ebook")'
+			cp -vax $@ ../pdf
 
 clean:
-			rm -rf *.aux *.log *.tex *.pdf Rcpp-introduction_cache pinp.cls jss.bst
+			@rm -rf *.aux *.log *.out *.tex *.pdf Rcpp-introduction_cache pinp.cls
