@@ -3,6 +3,9 @@
 	* vignettes/Rcpp-package.Rnw: Another wrapper
 	* vignettes/Rcpp-jss-2011.Rnw: Idem
 
+	* vignettes/Makefile: Refinements 
+	* vignettes/rmd/Makefile: Idem
+
 2019-10-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* vignettes/Rcpp-*.Rnw: Wrappers around pdf/*pdf
